# codex-exec-loop

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  BEGINNER_KOREAN_RECIPE_BOOK_OUTLINE.md  Cargo.toml  README.md  REPORT.md  TODO.md  cka-network-90min-lecture-plan.md  cka-network-90min-slide-plan.md  pyproject.toml
.codex-exec-loop/followups/: 10-review-queue.md  20-docs-and-verify.md
.codex-exec-loop/planning/: directions.toml  queue.snapshot.json  result-output.md  task-ledger.json  task-ledger.schema.json
.gemini/: styleguide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: native-pr-checks.yml  release-native-assets.yml
artifacts/terminal-bridge-readiness-2026-04-23/: 01-pane-discovery.txt  02-discovery-pane.txt  03-sendkeys-multiline.txt  08-stream-capture-pane.txt  09-interrupt.txt  10-approval-prompt.txt  11-approval-answer.txt  12-recovery-anchor.txt  13-recovery-by-pane-id.txt  14-missing-target.txt  15-missing-capture.txt  16-no-server.txt
docs/: README.md  bug-report.md
docs/agent/: 01-project-playbook.md  02-github-and-worktree.md  README.md
docs/design/: 01-current-product-state.md  02-tui-shell-flow.md  03-auto-followup-and-templates.md  04-hexagonal-runtime-architecture.md  05-known-gaps-and-risk-areas.md  05-parallel-control-plane-architecture.md  06-planning-runtime-and-draft-editor.md  07-tui-layered-architecture-and-aesthetic-contract.md  08-parallel-mode-mud-timeline-ui-pack-research.md  08-parallel-mode-supersession-board.md  planning-worker-session-orchestration.md
docs/gamification/: plan.md
docs/plan/: 01-roadmap.md  02-todo-backlog.md  03-execution-order.md  04-worktree-branch-rules.md  10-inline-scrollback-shell.md  11-parallel-worktree-plan.md  12-platform-validation-matrix.md  13-native-packaging-and-operator-runbook.md  14-codex-for-oss-application.md  14-planning-init-manual-editor-rollout.md  14-product-elevation-blueprint.md  15-planning-runtime-engagement-repair.md  15-ux-flow-rearchitecture.md  16-planning-and-automation-evolution.md  16-planning-runtime-engagement-bug-note.md  17-structure-and-architecture-debt-map.md  18-planning-workspace-lifecycle-commands.md  18-repo-shared-planning-authority-store.md  27-runtime-task-intake-design.md  (+14 more)
examples/: followup_prompt.txt  initial_prompt.txt
native/: AGENTS.md  Cargo.toml  README.md
npm/: README.md  package.json
schema/: codex_app_server_protocol.v2.schemas.json
scripts/: capture_native_validation.ps1  capture_native_validation.sh  check_admin_graphic_visual.sh  check_native_pr.sh  check_tui_layering.sh  cleanup_merged_worktrees.sh  gh-akra.sh  gh-refinedstone.sh  package_native_release.sh  planning-tool.sh  run_artifact_smoke_test.sh  summarize_native_validation.sh  validate_native_release_version.sh  verify_native_release.sh
src/: diagnostics.rs  lib.rs  main.rs  subprocess.rs  test_utils.rs
tests/: architecture_boundaries.rs  binary_entrypoints.rs  native_validation_scripts.rs  supersession_mud_projection.rs
(+766 files in other folders)
