[package]
name = "codex-exec-loop-native"
version = "0.1.0"
edition = "2024"
default-run = "codex-exec-loop-native"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.29"
jsonschema = { version = "0.46", default-features = false }
ratatui = { version = "0.29", features = ["scrolling-regions"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
which = "8.0"
