[package]
name = "codex-exec-loop-native"
version = "0.1.0"
edition = "2024"
default-run = "codex-exec-loop-native"

[dependencies]
anyhow = "1.0"
askama = "0.12"
axum = { version = "0.8", features = ["form", "json", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = "0.4"
crossterm = "0.29"
jsonschema = { version = "0.46", default-features = false }
rand = "0.8"
ratatui = { version = "0.29", features = ["scrolling-regions"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.8"
toml_edit = "0.22"
tower = { version = "0.5", features = ["util"] }
which = "8.0"
