[package]
name = "codex-exec-loop-native"
version = "1.3.5"
edition = "2024"
default-run = "codex-exec-loop-native"

[features]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]

[dependencies]
anyhow = "1.0"
askama = "0.12"
axum = { version = "0.8", features = ["form", "json", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = "0.4"
console-subscriber = { version = "0.5", default-features = false, features = ["env-filter"], optional = true }
crossterm = "0.29"
rand = "0.8"
ratatui = { version = "0.30", features = ["scrolling-regions", "crossterm_0_29", "unstable-backend-writer"] }
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
toml = "0.8"
toml_edit = "0.22"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
which = "8.0"

[dev-dependencies]
insta = "1"
vt100 = "0.16.2"
