[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-exec-loop"
version = "0.1.0"
description = "CLI wrapper for Codex exec/exec resume session loops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codex-exec-loop = "codex_exec_loop.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
